select.scss
@import "mixins/mixins";
@import "mixins/utils";
@import "common/var";
@import "select-dropdown";
@import "input";
@import "tag";
@import "option";
@import "option-group";
@import "scrollbar";

@include b(select) {
  width: 100%;
  display: inline-block;
  position: relative;

  .el-select__tags > span {
    display: flex;
    flex-wrap: wrap;
  }

  .el-input__inner {
    cursor: pointer;
    padding-right: 35px;
  }

  .el-input {
    .el-select__caret {
      color: $--select-input-color;
      font-size: $--select-input-font-size;
      transition: transform 0.3s;
      transform: rotateZ(180deg);
      cursor: pointer;

      @include when(reverse) {
        transform: rotateZ(0deg);
      }

      @include when(show-close) {
        font-size: $--select-font-size;
        text-align: center;
        transform: rotateZ(180deg);
        border-radius: $--border-radius-circle;
        color: $--select-input-color;
        transition: $--color-transition-base;

        &:hover {
          color: $--select-close-hover-color;
        }
      }
    }

    &.is-focus .el-input__inner {
      border-color: $--select-input-focus-border-color;
    }

    &.is-disabled {
      .el-input__inner,
      .el-select__caret {
        cursor: not-allowed !important;
      }
    }
  }

  > .el-input {
    display: block;
  }

  &.el-input:focus:not(.is-disabled),
  &.el-input:hover:not(.is-disabled) {
    .el-input__inner {
      border-color: $--select-border-color-hover;
    }
  }

  @include e(input) {
    border: none;
    outline: none;
    padding: 0;
    margin-left: 15px;
    color: $--select-multiple-input-color;
    font-size: $--select-font-size;
    appearance: none;
    height: 28px;
    background-color: transparent;

    @include when(mini) {
      height: 14px;
    }
  }

  @include e(close) {
    cursor: pointer;
    position: absolute;
    top: 8px;
    z-index: $--index-top;
    right: 25px;
    color: $--select-input-color;
    line-height: 18px;
    font-size: $--select-input-font-size;

    &:hover {
      color: $--select-close-hover-color;
    }
  }

  @include e(tags) {
    position: absolute;
    line-height: normal;
    white-space: normal;
    z-index: $--index-normal;
    top: 50%;
    transform: translateY(-50%);
    display: flex;
    align-items: center;
    flex-wrap: wrap;
  }

  .el-tag__close {
    margin-top: -2px;
  }

  .el-tag,
  .el-tag.el-tag--info {
    box-sizing: border-box;
    border-radius: 100px;
    height: 40px;
    line-height: 40px;
    padding: 0 20px;
    margin: 5px 0 5px 10px;
    border-color: $--jb-dark-primary-color;
    color: $--jb-dark-primary-color;
    background: $--color-light !important;
    font-size: 14px;

    &__close.el-icon-close {
      right: -7px;
      top: 0;
      background: #fff;
      color: $--jb-dark-primary-color;

      &:hover {
        color: #fff;
        background-color: $--jb-dark-primary-color;
      }

      &::before {
        display: block;
        transform: translate(0, 0.5px);
      }
    }
  }
}

.mw-550 {
  max-width: 550px;

  @media (max-width: $--sm) {
    max-width: calc(100% - 2.4em);
  }

  &.inline {
    position: relative !important;
    top: unset !important;
    bottom: 0 !important;
    left: 0 !important;
    margin: 16px 0 (-$--select-dropdown-max-height - 16px) 0;
    height: $--select-dropdown-max-height;

    .el-scrollbar {
      text-align: left;
      height: $--select-dropdown-max-height;
      max-height: $--select-dropdown-max-height;
      transition: max-height 200ms ease;
    }

    &.el-zoom-in-top-leave-active .el-scrollbar {
      display: none;
    }

    &.el-zoom-in-top-enter .el-scrollbar {
      max-height: 0;
    }

    .el-select-dropdown__empty {
      position: absolute;
      top: 0;
      padding: 0 20px;
      height: 34px;
      line-height: 34px;
    }

    .popper__arrow {
      z-index: -1;
    }

    @media (max-width: $--sm) and (max-height: 800px) {
      margin-bottom: (-($--select-dropdown-max-height / 5 * 3.5) - 16px);
      height: $--select-dropdown-max-height / 5 * 3.5;

      .el-scrollbar {
        max-height: $--select-dropdown-max-height / 5 * 3.5;
      }
    }

    @media (max-width: $--sm) and (max-height: 600px) {
      margin-bottom: (-($--select-dropdown-max-height / 5 * 2.6) - 15px);
      height: $--select-dropdown-max-height / 5 * 2.6;

      .el-scrollbar {
        max-height: $--select-dropdown-max-height / 5 * 2.6;
      }
    }
  }
}

